objects/vlocity_ins__PolicyLineItem__c.object
<CustomObject>
    <description>DEPRECATED. Replaced by Insured Item (AssetInsuredItem__c). Represents personal property items or parties covered under a policy. Master-detail child object of Policy.</description>
    <fields>
        <fullName>vlocity_ins__Address1__c</fullName>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Address2__c</fullName>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Age__c</fullName>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Breed__c</fullName>
        <label>Breed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Color__c</fullName>
        <label>Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Condition__c</fullName>
        <label>Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ConstructionType__c</fullName>
        <label>Construction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wood Frame</fullName>
                </value>
                <value>
                    <fullName>Metal Frame</fullName>
                </value>
                <value>
                    <fullName>Concrete Block</fullName>
                </value>
                <value>
                    <fullName>Poured Concrete</fullName>
                </value>
                <value>
                    <fullName>Other Noncombustible</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DeveloperName__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DeveloperName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ExteriorConstruction__c</fullName>
        <label>Exterior Construction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brick</fullName>
                </value>
                <value>
                    <fullName>Stone</fullName>
                </value>
                <value>
                    <fullName>Wood Shingle</fullName>
                </value>
                <value>
                    <fullName>Vinyl Siding</fullName>
                </value>
                <value>
                    <fullName>Wood Siding</fullName>
                </value>
                <value>
                    <fullName>Composite</fullName>
                </value>
                <value>
                    <fullName>Stucco</fullName>
                </value>
                <value>
                    <fullName>Concrete Block</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__FormattedAddress__c</fullName>
        <formula>IF( ISBLANK(vlocity_ins__Address1__c),&quot;&quot;, vlocity_ins__Address1__c &amp; &quot;, &quot;) &amp; 
IF( ISBLANK(vlocity_ins__Address2__c), &quot;&quot;, vlocity_ins__Address2__c &amp; &quot;, &quot; ) &amp;
IF( ISBLANK(vlocity_ins__City__c), &quot;&quot;, vlocity_ins__City__c &amp; &quot;, &quot;) &amp; TEXT(vlocity_ins__State__c) &amp; &quot; &quot; &amp; 
IF( ISBLANK(vlocity_ins__PostalCode__c), &quot;&quot;, vlocity_ins__PostalCode__c &amp; &quot;, &quot;) &amp;
vlocity_ins__Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Height__c</fullName>
        <label>Height</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__HullId__c</fullName>
        <label>Hull ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__HullMaterial__c</fullName>
        <label>Hull Material</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wood</fullName>
                </value>
                <value>
                    <fullName>Fiberglass</fullName>
                </value>
                <value>
                    <fullName>Aluminum</fullName>
                </value>
                <value>
                    <fullName>Steel</fullName>
                </value>
                <value>
                    <fullName>Composite</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__HullType__c</fullName>
        <label>Hull Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Smooth Curve</fullName>
                </value>
                <value>
                    <fullName>Chined</fullName>
                </value>
                <value>
                    <fullName>Displacement</fullName>
                </value>
                <value>
                    <fullName>Planing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ImageType__c</fullName>
        <formula>IF( (RecordType.DeveloperName = &apos;Animal&apos; || RecordType.DeveloperName  = &apos;Crop&apos;  || RecordType.DeveloperName  = &apos;Livestock&apos; || RecordType.DeveloperName = &apos;BusinessOperation&apos;), RecordType.DeveloperName, 
 CASE( TEXT(vlocity_ins__Type__c) , 
       &apos;Recreational Vehicle&apos;, &apos;AntiqueClassicVehicle&apos;, 
       &apos;Single Family Home&apos;, &apos;Home&apos;,
       &apos;Multi-Family Home&apos;, &apos;Home&apos;,
       &apos;Condominium&apos;, &apos;Home&apos;,
       &apos;Commercial - Office&apos;, &apos;CommercialProperty&apos;,
       &apos;Commercial - Warehouse&apos;, &apos;CommercialProperty&apos;,
       &apos;Commercial - Storefront&apos;, &apos;CommercialProperty&apos;,
       &apos;Commercial - Garage&apos;, &apos;CommercialProperty&apos;,
       &apos;Business - Owned&apos;, &apos;Business&apos;,
       &apos;Business - Leased&apos;, &apos;Business&apos;,
       &apos;Outbuilding&apos;, &apos;Home&apos;,
       &apos;Houseboat&apos;, &apos;Boat&apos;,
       &apos;Company&apos;, &apos;CommercialProperty&apos;,
       &apos;Fishing Boat&apos;, &apos;Boat&apos;,
       &apos;Pleasure Boat&apos;, &apos;Boat&apos;,
       &apos;Trailer&apos;, &apos;MobileHome&apos;,
       &apos;Scheduled Personal Property&apos;, &apos;Other&apos;,
       TEXT(vlocity_ins__Type__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Image__c</fullName>
        <label>Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InsuredParty__c</fullName>
        <label>Insured Party</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Length__c</fullName>
        <label>Length</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LicenseJurisdiction__c</fullName>
        <label>License Jurisdiction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__LicenseNumber__c</fullName>
        <label>License Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Make__c</fullName>
        <label>Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MaritalStatus__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>Domestic Partnership</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Widowed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__MarketValue__c</fullName>
        <label>Market Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ModelYear__c</fullName>
        <label>Model Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Model__c</fullName>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Motors__c</fullName>
        <label>Motors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Neutered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Neutered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__NumberOfStories__c</fullName>
        <label># of Stories</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PolicyId__c</fullName>
        <label>Policy</label>
        <referenceTo>vlocity_ins__Policy__c</referenceTo>
        <relationshipName>PolicyLineItemsId</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RatingClassification__c</fullName>
        <label>Rating Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Style__c</fullName>
        <label>Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cargo Truck</fullName>
                </value>
                <value>
                    <fullName>Convertible</fullName>
                </value>
                <value>
                    <fullName>Farm Equipment</fullName>
                </value>
                <value>
                    <fullName>Hatchback</fullName>
                </value>
                <value>
                    <fullName>Light Truck</fullName>
                </value>
                <value>
                    <fullName>Minivan</fullName>
                </value>
                <value>
                    <fullName>Motorcycle</fullName>
                </value>
                <value>
                    <fullName>RV</fullName>
                </value>
                <value>
                    <fullName>Sedan</fullName>
                </value>
                <value>
                    <fullName>Semi Tractor</fullName>
                </value>
                <value>
                    <fullName>Semi-Trailer</fullName>
                </value>
                <value>
                    <fullName>SUV</fullName>
                </value>
                <value>
                    <fullName>Trailer</fullName>
                </value>
                <value>
                    <fullName>Van</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Bass Boat</fullName>
                </value>
                <value>
                    <fullName>Jet Ski / Water Scooter</fullName>
                </value>
                <value>
                    <fullName>Runabout</fullName>
                </value>
                <value>
                    <fullName>Sailboat</fullName>
                </value>
                <value>
                    <fullName>Cabin Cruiser</fullName>
                </value>
                <value>
                    <fullName>Pontoon Boat</fullName>
                </value>
                <value>
                    <fullName>Yacht</fullName>
                </value>
                <value>
                    <fullName>Airboat</fullName>
                </value>
                <value>
                    <fullName>Canoe</fullName>
                </value>
                <value>
                    <fullName>Catamaran</fullName>
                </value>
                <value>
                    <fullName>Jet Boat</fullName>
                </value>
                <value>
                    <fullName>Kayak</fullName>
                </value>
                <value>
                    <fullName>Trawler</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Antique/Classic Vehicle</fullName>
                </value>
                <value>
                    <fullName>Apartment</fullName>
                </value>
                <value>
                    <fullName>Barley</fullName>
                </value>
                <value>
                    <fullName>Beans</fullName>
                </value>
                <value>
                    <fullName>Business - Leased</fullName>
                </value>
                <value>
                    <fullName>Business - Owned</fullName>
                </value>
                <value>
                    <fullName>Cat</fullName>
                </value>
                <value>
                    <fullName>Chicken</fullName>
                </value>
                <value>
                    <fullName>Commercial - Garage</fullName>
                </value>
                <value>
                    <fullName>Commercial - Office</fullName>
                </value>
                <value>
                    <fullName>Commercial - Storefront</fullName>
                </value>
                <value>
                    <fullName>Commercial Vehicle</fullName>
                </value>
                <value>
                    <fullName>Commercial - Warehouse</fullName>
                </value>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Condominium</fullName>
                </value>
                <value>
                    <fullName>Corn</fullName>
                </value>
                <value>
                    <fullName>Dog</fullName>
                </value>
                <value>
                    <fullName>Donkey</fullName>
                </value>
                <value>
                    <fullName>Driver</fullName>
                </value>
                <value>
                    <fullName>Duck</fullName>
                </value>
                <value>
                    <fullName>Ewes</fullName>
                </value>
                <value>
                    <fullName>Farm Vehicle</fullName>
                </value>
                <value>
                    <fullName>Fishing Boat</fullName>
                </value>
                <value>
                    <fullName>Fruit</fullName>
                </value>
                <value>
                    <fullName>Goat</fullName>
                </value>
                <value>
                    <fullName>Goose</fullName>
                </value>
                <value>
                    <fullName>Grain</fullName>
                </value>
                <value>
                    <fullName>Guinea</fullName>
                </value>
                <value>
                    <fullName>Hay</fullName>
                </value>
                <value>
                    <fullName>Hen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Use__c</fullName>
        <label>Use</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Dwelling</fullName>
                </value>
                <value>
                    <fullName>Second Home</fullName>
                </value>
                <value>
                    <fullName>Recreational Use</fullName>
                </value>
                <value>
                    <fullName>Investment Property</fullName>
                </value>
                <value>
                    <fullName>Business - Owned</fullName>
                </value>
                <value>
                    <fullName>Business - Leased</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Pleasure</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Mixed Use</fullName>
                </value>
                <value>
                    <fullName>Farming</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__VIN__c</fullName>
        <label>VIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Weight__c</fullName>
        <label>Weight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__YearBuilt__c</fullName>
        <label>Year Built/Manufactured</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__YearPurchased__c</fullName>
        <label>Year Purchased</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Insured Items &amp; People</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insured Items &amp; People</pluralLabel>
    <recordTypes>
        <fullName>vlocity_ins__Animal</fullName>
        <active>true</active>
        <label>Animal</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__BusinessOperation</fullName>
        <active>true</active>
        <label>Business Operation</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__Crop</fullName>
        <active>true</active>
        <label>Crop</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__Livestock</fullName>
        <active>true</active>
        <label>Livestock</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__People</fullName>
        <active>true</active>
        <label>People</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__Property</fullName>
        <active>true</active>
        <label>Property</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__Vehicles</fullName>
        <active>true</active>
        <label>Vehicles</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__Watercraft</fullName>
        <active>true</active>
        <label>Watercraft</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>